Added users-movies relationships and filter for showing a user's movies upon clicking on name

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -13,13 +13,16 @@
   <tr>
     <td><%= movie.title %></td>
     <td><%= movie.description %></td>
-    <td><%= link_to 'Show', movie %></td>
-    <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-    <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% if current_user == movie.user %>
+      <td><%= link_to 'Show', movie %></td>
+      <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
+      <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
 
 <br />
-
-<%= link_to 'New Movie', new_movie_path %>
+<% if current_user %>
+  <%= link_to 'New Movie', new_movie_path %> | <%= link_to 'Show all movies', movies_path %>
+<% end %>
