--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <div>MOVIERAMA</div>
+    <% if current_user %>
+        <div>Welcome back <%= link_to current_user.name, movies_by_user_path %> | <%= link_to "Logout", destroy_user_session_path, method: :delete %></div>
+    <% else %>
+        <%= link_to "Login", new_user_session_path %> OR <%= link_to "Sign Up", new_user_registration_path %>
+    <% end %>
 
 <%= yield %>
 
